* ltconfig.in (with_gcc):  Make the value of this option available to the generated libtool script. * ltmain.in (compile_command, finalize_command):  The native C and C++ compilers on IRIX require the -LANG:std in order to to compile correctly.   The same options should _not_ be passed through to gcc on IRIX, or at all on other architectures for backwards compatibility (among others). Reported by Bob Freisenhahn <bfreisen@simple.dallas.tx.us> Reported by Albert Chin-A-Young <china@thewrittenword.com>

--- a/ltconfig.in
+++ b/ltconfig.in
@@ -2698,6 +2698,9 @@ AR_FLAGS=$AR_FLAGS
 # The default C compiler.
 CC=$CC
 
+# Is the compiler the GNU C compiler?
+with_gcc=$with_gcc
+
 # The linker used to build libraries.
 LD=$LD
 
