--- a/ltconfig.in
+++ b/ltconfig.in
@@ -2090,6 +2090,9 @@ LTCC=$LTCC
 # A language-specific compiler.
 CC=$CC
 
+# Is the compiler the GNU C compiler?
+with_gcc=$with_gcc
+
 # The linker used to build libraries.
 LD=$LD
 
