--- a/ltconfig.in
+++ b/ltconfig.in
@@ -620,6 +620,11 @@ old_archive_cmds='$AR $AR_FLAGS $oldlib$oldobjs$old_deplibs'
 old_postinstall_cmds='chmod 644 $oldlib'
 old_postuninstall_cmds=
 
+if test -n "$RANLIB"; then
+  old_archive_cmds="$old_archive_cmds~\$RANLIB \$oldlib"
+  old_postinstall_cmds="\$RANLIB \$oldlib~$old_postinstall_cmds"
+fi
+
 # Source the script associated with the $tagname tag configuration.
 if test -n "$tagname"; then
   . $ltmain
