* libtool.m4: Ignore Tru64's nm's complaint. * ltconfig.in: Likewise.

--- a/ltconfig.in
+++ b/ltconfig.in
@@ -1572,7 +1572,8 @@ if test -z "$NM"; then
 	# Check to see if the nm accepts a BSD-compat flag.
 	# Adding the `sed 1q' prevents false positives on HP-UX, which says:
 	#   nm: unknown option "B" ignored
-	if ($ac_dir/nm -B /dev/null 2>&1 | sed '1q'; exit 0) | egrep /dev/null >/dev/null; then
+	# Tru64's nm complains that /dev/null is an invalid object file
+	if ($ac_dir/nm -B /dev/null 2>&1 | sed '1q'; exit 0) | egrep '(/dev/null|Invalid file or object type)' >/dev/null; then
 	  NM="$ac_dir/nm -B"
 	  break
 	elif ($ac_dir/nm -p /dev/null 2>&1 | sed '1q'; exit 0) | egrep /dev/null >/dev/null; then
