* libtool.m4 (AM_PROG_GCJ): Removed. (LT_AC_PROG_GCJ): Use AC_CHECK_TOOL.  Set GCJ to `no' if not found. * configure.in: Use LT_AC_PROG_GCJ. Reported by Nick Hudson <nick@nthcliff.demon.co.uk>

--- a/configure.in
+++ b/configure.in
@@ -61,9 +61,7 @@ AC_PROG_CXX
 popdef([AC_MSG_ERROR])
 AM_CONDITIONAL(HAVE_CXX, [test "x$CXX" != xno])
 
-pushdef([AC_MSG_ERROR], [GCJ=no])
-ifdef([AC_PROG_GCJ],[AC_PROG_GCJ],[AM_PROG_GCJ])
-popdef([AC_MSG_ERROR])
+LT_AC_PROG_GCJ
 AM_CONDITIONAL(HAVE_GCJ, [test "x$GCJ" != xno])
 
 AC_ARG_ENABLE(ltdl-install,
