* ltconfig.in (enable_dlopen): Set to no when lt_cv_dlopen is no.

--- a/ltconfig.in
+++ b/ltconfig.in
@@ -2341,6 +2341,8 @@ fi
 
   if test "x$lt_cv_dlopen" != xno; then
     enable_dlopen=yes
+  else
+    enable_dlopen=no
   fi
 
   case "$lt_cv_dlopen" in
