--- a/ltconfig.in
+++ b/ltconfig.in
@@ -2492,6 +2492,8 @@ fi
 
   if test "x$lt_cv_dlopen" != xno; then
     enable_dlopen=yes
+  else
+    enable_dlopen=no
   fi
 
   case "$lt_cv_dlopen" in
