* ltmain.in (newdlprefiles): Use dlname if it's available and old_library isn't; use linklib only if dlname is not available.

--- a/ltmain.in
+++ b/ltmain.in
@@ -1821,6 +1821,9 @@ EOF
 	  # are required to link).
 	  if test -n "$old_library"; then
 	    newdlprefiles="$newdlprefiles $dir/$old_library"
+	  # Otherwise, use the dlname, so that lt_dlopen finds it.
+	  elif test -n "$dlname"; then
+	    newdlprefiles="$newdlprefiles $dir/$dlname"
 	  else
 	    newdlprefiles="$newdlprefiles $dir/$linklib"
 	  fi
