--- a/ltmain.in
+++ b/ltmain.in
@@ -1637,6 +1637,9 @@ compiler."
 	  # are required to link).
 	  if test -n "$old_library"; then
 	    newdlprefiles="$newdlprefiles $dir/$old_library"
+	  # Otherwise, use the dlname, so that lt_dlopen finds it.
+	  elif test -n "$dlname"; then
+	    newdlprefiles="$newdlprefiles $dir/$dlname"
 	  else
 	    newdlprefiles="$newdlprefiles $dir/$linklib"
 	  fi
