--- a/ltconfig.in
+++ b/ltconfig.in
@@ -1607,11 +1607,7 @@ freebsd*)
   freebsd2*)
     shlibpath_overrides_runpath=yes
     ;;
-  freebsd3.[01]* | freebsdelf3.[01]*)
-    shlibpath_overrides_runpath=yes
-    hardcode_into_libs=yes
-    ;;
-  *) # from 3.2 on
+  *)
     shlibpath_overrides_runpath=no
     hardcode_into_libs=yes
     ;;
@@ -2086,7 +2082,9 @@ test "$enable_shared" = yes || enable_static=yes
 
 echo "checking whether to build static libraries... $enable_static" 1>&6
 
-if test "$hardcode_action" = relink || test "$hardcode_into_libs" = all; then
+if test "$hardcode_action" = relink ||
+   { test "$hardcode_into_libs" = yes &&
+     test "$shlibpath_overrides_runpath" != yes; }; then
   # Fast installation is not supported
   enable_fast_install=no
 elif test "$shlibpath_overrides_runpath" = yes ||
