--- a/mdemo/configure.in
+++ b/mdemo/configure.in
@@ -16,6 +16,20 @@ AC_LIBTOOL_DLOPEN
 AM_PROG_LIBTOOL
 AC_SUBST(LIBTOOL_DEPS)
 
+if ${CONFIG_SHELL} ./libtool --features | grep "enable static" >/dev/null; then
+  STATIC=-static
+else
+  STATIC=
+fi
+AC_SUBST(STATIC)
+
+case $host_os in
+dnl aix 4.1 provides dlopen() through -lsvld, but this library can't
+dnl be linked statically.
+aix4.[[01]]*)
+  STATIC= ;;
+esac
+
 AC_CHECK_HEADERS(math.h)
 
 AC_CHECK_LIBM
