--- a/mdemo/configure.in
+++ b/mdemo/configure.in
@@ -21,6 +21,15 @@ else
 fi
 AC_SUBST(STATIC)
 
+case $host_os in
+dnl aix 4.1 provides dlopen() through -lsvld, but this library can't
+dnl be linked statically.
+aix4.[[01]]*)
+  STATIC= ;;
+*)
+  STATIC=-static ;;
+esac
+
 AC_CHECK_HEADERS(math.h)
 
 AC_CHECK_LIBM
