--- a/mdemo/Makefile.am
+++ b/mdemo/Makefile.am
@@ -10,10 +10,10 @@ lib_LTLIBRARIES = foo1.la libfoo2.la libsub.la
 
 foo1_la_SOURCES = foo1.c
 foo1_la_LIBADD = $(LIBM)
-foo1_la_LDFLAGS = -no-undefined -module -avoid-version
+foo1_la_LDFLAGS = -module -avoid-version
 
 libfoo2_la_SOURCES = foo2.c
-libfoo2_la_LIBADD = $(LIBM)
+libfoo2_la_LIBADD = $(LIBM) libsub.la
 libfoo2_la_LDFLAGS = -no-undefined -module -export-symbols-regex "libfoo2.*"
 
 libsub_la_SOURCES = sub.c
