libtool.m4 now contains a version of the code that used to run from ltconfig, so that ltmain.sh and then libtool are generated at configure time.
* Makefile.am:  Don't generate ltmain.sh or ltconfig anymore.
* bootstrap: ltconfig is no more!
* configure.in: Call AC_PROG_LIBTOOL directly.
(AC_OUTPUT): Generate tmain.sh.
* libtool.m4: Don't build an argument list for ltconfig.
(_LT_AC_LTCONFIG_HACK):  Refactoring of the former contents of
ltconfig.in to take advantage of the m4 macros from autoconf.
* ltmain.in: Don't do a version check against ltconfig.
* tests/assign.test: Remove reference to ltconfig.
* tests/hardcode.test: ditto.
* tests/sh.test: ditto.

--- a/Makefile.am
+++ b/Makefile.am
@@ -6,7 +6,7 @@ BUILD_SUBDIRS = . libltdl doc tests
 SUBDIRS = $(BUILD_SUBDIRS)
 DIST_SUBDIRS = $(BUILD_SUBDIRS) $(CONF_SUBDIRS)
 
-# We need to export these variables when we run ltconfig.
+# We need to export these variables
 CFLAGS = @CFLAGS@
 CPPLAGS = @CPPFLAGS@
 LDFLAGS = @LDFLAGS@
@@ -14,12 +14,12 @@ LIBS= @LIBS@
 
 aclocal_macros = libtool.m4 ltdl.m4
 
-EXTRA_DIST = $(aclocal_macros) libtoolize.in ltconfig.in ltmain.in \
+EXTRA_DIST = $(aclocal_macros) libtoolize.in ltmain.in \
 	mkstamp ChangeLog.0
-CLEANFILES = libtool libtoolize ltconfig.T ltmain.shT
+CLEANFILES = libtool libtoolize ltmain.shT
 
 # These are required by libtoolize.
-pkgdata_SCRIPTS = config.guess config.sub ltconfig
+pkgdata_SCRIPTS = config.guess config.sub
 pkgdata_DATA = ltmain.sh
 
 # This macro file should be visible to Automake's aclocal.
@@ -27,29 +27,6 @@ aclocal_DATA = $(aclocal_macros)
 
 # The standalone libtool script, and the libtool distributor.
 bin_SCRIPTS = libtool libtoolize
-
-libtool: $(srcdir)/ltmain.sh $(srcdir)/ltconfig
-	AR="$(AR)" CC="$(CC)" CFLAGS="$(CFLAGS)" CPPFLAGS="$(CPPFLAGS)" \
-	MAGIC="$(MAGIC)" LD="$(LD)" LDFLAGS="$(LDFLAGS)" LIBS="$(LIBS)" \
-	LN_S="$(LN_S)" NM="$(NM)" RANLIB="$(RANLIB)" STRIP="$(STRIP)" \
-	AS="$(AS)" DLLTOOL="$(DLLTOOL)" OBJDUMP="$(OBJDUMP)" \
-	CONFIG_SHELL="$(SHELL)" ECHO="$(ECHO)" \
-	objext="$(OBJEXT)" exeext="$(EXEEXT)" reload_flag="$(reload_flag)" \
-	deplibs_check_method="$(deplibs_check_method)" file_magic_cmd="$(file_magic_cmd)" \
-	$(SHELL) $(srcdir)/ltconfig $(LIBTOOL_FLAGS) --srcdir=$(srcdir) \
-	  --output=$@ $(srcdir)/ltmain.sh
-
-# Experimental C version of libtool.
-clibtool: $(srcdir)/ltmain.c $(srcdir)/ltconfig
-	AR="$(AR)" CC="$(CC)" CFLAGS="$(CFLAGS)" CPPFLAGS="$(CPPFLAGS)" \
-	MAGIC="$(MAGIC)" LD="$(LD)" LDFLAGS="$(LDFLAGS)" LIBS="$(LIBS)" \
-	LN_S="$(LN_S)" NM="$(NM)" RANLIB="$(RANLIB)" STRIP="$(STRIP)" \
-	AS="$(AS)" DLLTOOL="$(DLLTOOL)" OBJDUMP="$(OBJDUMP)" \
-	CONFIG_SHELL="$(SHELL)" ECHO="$(ECHO)" \
-	objext="$(objext)" exeext="$(exeext)" reload_flag="$(reload_flag)" \
-	deplibs_check_method="$(deplibs_check_method)" file_magic_cmd="$(file_magic_cmd)" \
-	$(SHELL) $(srcdir)/ltconfig $(LIBTOOL_FLAGS) --srcdir=$(srcdir) \
-	  --output=$@ $(srcdir)/ltmain.c
 
 libtoolize: $(srcdir)/libtoolize.in $(top_builddir)/config.status
 	CONFIG_FILES=libtoolize CONFIG_HEADERS= $(top_builddir)/config.status
@@ -66,29 +43,6 @@ update-timestamps:
 	@if (cd $(srcdir) && test -d CVS && \
 	    $(CVS) -n update $(TSDEPS_DIST) | grep '^M'); then \
 		echo "Cannot make dist before commit"; exit 1; else :; fi
-	$(MAKE) TSDEPS="$(TSDEPS_DIST)" $(srcdir)/ltconfig $(srcdir)/ltmain.sh
-
-# Do line number substitution, as well as PACKAGE, VERSION and TIMESTAMP.
-# Line numbering transliterated from a section in autoconf (Autoconf 2.12).
-@srcdir@/ltconfig: $(srcdir)/ltconfig.in $(top_srcdir)/configure.in $(TSDEPS)
-	rm -f ltconfig.T
-	date=`$(SHELL) $(srcdir)/mkstamp < $(srcdir)/ChangeLog` && \
-	$(AWK) '/@LINENO@/ { printf "%d:", NR } { print }' $(srcdir)/ltconfig.in | \
-	  sed -e 's/@''PACKAGE@/@PACKAGE@/' -e 's/@''VERSION@/@VERSION@/' \
-	      -e "s%@""TIMESTAMP@%$$date%" \
-	      -e '/@LINENO@/s/^\([0-9][0-9]*\):\(.*\)@LINENO@/\2\1/' \
-		> ltconfig.T
-	chmod +x ltconfig.T
-	mv -f ltconfig.T $@ || \
-	(rm -f $@ && cp ltconfig.T $@ && rm -f ltconfig.T)
-
-@srcdir@/ltmain.sh: $(srcdir)/ltmain.in $(top_srcdir)/configure.in $(TSDEPS)
-	-rm -f ltmain.shT
-	date=`$(SHELL) $(srcdir)/mkstamp < $(srcdir)/ChangeLog` && \
-	sed -e 's/@''PACKAGE@/@PACKAGE@/' -e 's/@''VERSION@/@VERSION@/' \
-	    -e "s%@""TIMESTAMP@%$$date%" $(srcdir)/ltmain.in > ltmain.shT
-	mv -f ltmain.shT $@ || \
-	(rm -f $@ && cp ltmain.shT $@ && rm -f ltmain.shT)
 
 # All our rules should depend on these demo files.
 all-recursive: $(srcdir)/libltdl/acinclude.m4 $(ACINCLUDE_M4_LIST)
