--- a/configure.in
+++ b/configure.in
@@ -31,7 +31,7 @@ AC_SUBST(pkgdatadir) dnl automake does not need this, but libtoolize does
 aclocaldir='${datadir}/aclocal'
 AC_SUBST(aclocaldir)
 
-dnl Use the specified CC and LD while running ltconfig.
+dnl Use the specified CC and LD
 AC_PROG_CC
 AM_PROG_LD
 AC_SUBST(LD)
@@ -39,7 +39,7 @@ AM_PROG_NM
 AC_SUBST(NM)
 AC_PROG_LN_S
 
-dnl For the `lineno' script (which puts line numbers into `ltconfig').
+dnl For the `lineno' script (which puts line numbers into `ltmain.sh').
 AC_PROG_AWK
 
 dnl Check for win32 dll support
@@ -47,17 +47,7 @@ AC_LIBTOOL_WIN32_DLL
 
 dnl Check for dlopen support
 AC_LIBTOOL_DLOPEN
-AC_LIBTOOL_SETUP
-AC_SUBST(DLLTOOL)
-AC_SUBST(MAGIC)
-AC_SUBST(OBJDUMP)
-AC_SUBST(AS)
-AC_SUBST(reload_flag)
-AC_SUBST(file_magic_cmd)
-AC_SUBST(deplibs_check_method)
-
-LIBTOOL_FLAGS="$libtool_flags"
-AC_SUBST(LIBTOOL_FLAGS)
+AC_PROG_LIBTOOL
 
 AC_ARG_ENABLE(ltdl-install,
 [  --disable-ltdl-install  do not install libltdl])
@@ -81,11 +71,7 @@ done
 AC_SUBST(ACINCLUDE_M4_LIST)
 AC_SUBST(DIST_MAKEFILE_LIST)
 
-AC_OUTPUT_COMMANDS([
-  test -f ${saved_top_srcdir}/ltconfig || ${MAKE-make} ${saved_top_srcdir}/ltconfig
-  test -f ${saved_top_srcdir}/ltmain.sh || ${MAKE-make} ${saved_top_srcdir}/ltmain.sh
-], [saved_top_srcdir=${srcdir}])
-AC_OUTPUT([Makefile doc/Makefile tests/Makefile])
+AC_OUTPUT([Makefile doc/Makefile tests/Makefile ltmain.sh:ltmain.in])
 
 # Local Variables:
 # mode:shell-script
