libtool.m4 (AC_PROG_LIBTOOL):  Removed, as it was triggering a bug in Autoconf-2.13 AC_REQUIRE implementation which inserted some of the expanded tests too early in the generaated configure. (_AC_PROG_LIBTOOL): renamed to AC_PROG_LIBTOOL, and defines itself to an empty expansion to prevent multiple expansions. configure.in (AC_LIBTOOL_SETUP): Replaced by a call to AC_PROG_LIBTOOL now that the AC_REQUIRE bug has been worked around.

--- a/configure.in
+++ b/configure.in
@@ -44,8 +44,7 @@ AC_LIBTOOL_WIN32_DLL
 
 dnl Check for dlopen support
 AC_LIBTOOL_DLOPEN
-
-AC_LIBTOOL_SETUP
+AC_PROG_LIBTOOL
 
 AC_ARG_ENABLE(ltdl-install,
 [  --disable-ltdl-install  do not install libltdl])
