* ltmain.in (version_type): Use "-iface" as the windows versioning scheme, where iface is the number of the oldest interface supported.

--- a/ltmain.in
+++ b/ltmain.in
@@ -2481,10 +2481,10 @@ EOF
 	  ;;
 
 	windows)
-	  # Like Linux, but with '-' rather than '.', since we only
-	  # want one extension on Windows 95.
+	  # Use '-' rather than '.', since we only want one
+	  # extension on DOS 8.3 filesystems.
 	  major=`expr $current - $age`
-	  versuffix="-$major-$age-$revision"
+	  versuffix="-$major"
 	  ;;
 
 	*)
