* ltcf-cxx.sh (netbsd): Improved support. * ltconfig.in (netbsd): ditto.

--- a/ltconfig.in
+++ b/ltconfig.in
@@ -1123,6 +1123,8 @@ netbsd*)
     dynamic_linker='NetBSD ld.elf_so'
   fi
   shlibpath_var=LD_LIBRARY_PATH
+  shlibpath_overrides_runpath=yes
+  hardcode_into_libs=yes
   ;;
 
 openbsd*)
